# deep-learning-from-scratch-c

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  activation.c  activation.h  grad.c  grad.h  loss.c  loss.h  main.c  mnist.c  mnist.h  mnist_main.c  perceptron.c  perceptron.h  simple_net.c  simple_net.h  train_nueralnet.c  two_layer_net.c  two_layer_net.h
test/: CMakeLists.txt  test-activation.c  test-grad.c  test-loss.c  test-perceptron.c  test-simple_net.c  test-two_layer_net.c
